@startuml
'https://plantuml.com/sequence-diagram

class ToDoListApplication
{
    +main(String[])
    +start(Stage stage)
}


class Item
{
    String: description
    String: dueDate
    boolean: completion
    +List<Item> toDoList
    +Item()
    +Item(String description, String dueDate, boolean completion)
    +String getDescription()
    +void setDescription()
    +String getDueDate()
    +void setDueDate()
    +void getCompletionStatus()
    +void setCompletionStatus()
    +List<Item> getToDoList
}


class FXMLController
{
        -ResourceBundle resources;
        -URL location;
        -Button addItem;
        -TableColumn<Item, String> description;
        -TableColumn<Item, String> dueDate;
        -TableColumn<Item, Boolean> completion;
        -Button editItem;
        -Button deleteItem;
        -Button deleteAll;
        -TextField currentDescription;
        -TableView<Item> tableOfItems;
        -Menu menu;
        -MenuBar menuBar;
        -MenuItem menuCompleteButton;
        -MenuItem menuIncompleteButton;
        -MenuItem viewAllButton;
        -MenuItem openButton;
        -MenuItem saveButton;
        -DatePicker datePicker;
        -Menu viewListButton;
        -CheckBox completionCheckBox;

        +void initialize()
        +void addItem(ActionEvent e)
        +void deleteItem(ActionEvent e)
        +void deleteAll (ActionEvent event)
        +void editItem(ActionEvent e)
        +void loadFile(ActionEvent e) throws FileNotFoundException
        +void importList(File selectedFile) throws FileNotFoundException
        -void displayList()
        +void saveList(ActionEvent e)
        +void getToDoList(File selectedFile)
        +void displayCompletedItems(ActionEvent e)
        -ObservableList<Item> createCompletedList(ObservableList<Item> items)
        +displayIncompletedItems(ActionEvent e)
        -void createIncompletedList(ObservableList<Item> items)
        +void displayAllItems(ActionEvent e)

}

class RequirementChecker
{
    + boolean checkDescription(String newDescription)
    +String checkDueDate(LocalDate date)
}

FXMLController --o RequirementChecker
ToDoListApplication <|-- javafx.application.Application
ToDoListApplication --o Item
ToDoListApplication --o FXMLController


@enduml